force-app/main/default/objects/Vehicle_T_C__mdt/Vehicle_T_C__mdt.object-meta.xml
<CustomObject>
    <label>Vehicle T&amp;C</label>
    <pluralLabel>Vehicle T&amp;C</pluralLabel>
</CustomObject>