force-app/main/default/objects/Vehicle_T_C__mdt/fields/Term10__c.field-meta.xml
<CustomField>
    <fullName>Term10__c</fullName>
    <label>Term10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>