force-app/main/default/objects/Vehicle_T_C__mdt/fields/Term11__c.field-meta.xml
<CustomField>
    <fullName>Term11__c</fullName>
    <label>Term11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>