force-app/main/default/objects/Vehicle_T_C__mdt/fields/Term12__c.field-meta.xml
<CustomField>
    <fullName>Term12__c</fullName>
    <label>Term12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>